...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_orch_butt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onSaveChosen"
...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_orch_butt_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onDeleteChosen"
...
                            android:text="TextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/info_orch_name_desc" />

                        <EditText
                            android:id="@+id/info_orch_name_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
...
                            android:text="TextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/info_orch_crop_desc" />

                        <EditText
                            android:id="@+id/info_orch_crop_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
...
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="9"
                                android:text="TextView" />

                            <EditText
                                android:id="@+id/info_orch_mass_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                            android:text="TextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/info_orch_irig_desc" />

                        <!--<EditText-->
                            <!--android:id="@+id/info_orch_irig_edit"-->
                            <!--android:layout_width="0dp"-->
                            <!--android:layout_height="wrap_content"-->
                            <!--android:layout_marginBottom="8dp"-->
                            <!--android:layout_marginEnd="8dp"-->
                            <!--android:layout_marginStart="24dp"-->
                            <!--android:layout_marginTop="8dp"-->
...
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            app:layout_constraintTop_toBottomOf="@id/info_orch_cultivars_look">

                            <ImageButton
                                android:id="@+id/info_orch_cultivars_add_butt"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:onClick="addCultivar"
                                android:src="@android:drawable/ic_input_add" />

                            <EditText
                                android:id="@+id/info_orch_cultivars_add_text"
                                android:layout_width="0dp"
                                android:layout_height="45dp"
                                android:layout_marginEnd="3dp"
                                android:layout_weight="10"
                                android:ems="10"
                                android:inputType="text"
...
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="9"
                                android:text="TextView" />

                            <EditText
                                android:id="@+id/info_orch_tree_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
                                android:layout_weight="9"
                                android:text="TextView" />

                            <EditText
                                android:id="@+id/info_orch_row_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                            android:text="TextView"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/info_orch_further_desc" />

                        <EditText
                            android:id="@+id/info_orch_further_edit"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="8dp"
                            android:layout_marginEnd="8dp"
                            android:layout_marginStart="24dp"
                            android:layout_marginTop="8dp"
...
