...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_farm_butt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onSaveChosen"
...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_farm_butt_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onDeleteChosen"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_name_desc" />

                            <EditText
                                android:id="@+id/info_farm_name_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...

                        <android.support.constraint.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/info_farm_company_desc"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginStart="8dp"
                                android:layout_marginTop="8dp"
                                android:text="@string/info_farm_company"
                                app:layout_constraintStart_toStartOf="parent"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_company_desc" />

                            <EditText
                                android:id="@+id/info_farm_company_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_email_desc" />

                            <EditText
                                android:id="@+id/info_farm_email_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_phone_desc" />

                            <EditText
                                android:id="@+id/info_farm_phone_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_province_desc" />

                            <EditText
                                android:id="@+id/info_farm_province_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_town_desc" />

                            <EditText
                                android:id="@+id/info_farm_town_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_farm_further_desc" />

                            <EditText
                                android:id="@+id/info_farm_further_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
