...
    <string name="menuLeave">Log Off</string>
    <string name="menuSettings">Settings</string>
    <string name="menuSearch">Search</string>

    <!--Strings related to Information-->
    <string name="titleInformation">Information</string>
    <string name="infoFarms">Farms</string>
    <string name="infoWorkers">Workers</string>
    <string name="infoOrchards">Orchards</string>
    <string name="notFound">Not Found</string>
    <!--Strings related to delete dialog-->
    <string name="sure">Are you sure?</string>
    <string name="yes">Delete</string>
    <string name="no">Cancel</string>

    <!--Strings related to Information on Farms-->
    <string name="info_farm_name">Farm Name:</string>
    <string name="info_farm_further">Further Information:</string>
    <string name="info_farm_assignedOrchards">Assigned Orchards:</string>
    <string name="info_farm_company">Company Name:</string>
    <string name="info_farm_email">Farm Email:</string>
    <string name="info_farm_phone">Contact Number:</string>
    <string name="info_farm_province">Province:</string>
    <string name="info_farm_town">Nearest Town:</string>

    <!--Strings related to Information on Orchards-->
    <string name="info_orch_name">Orchard Name:</string>
    <string name="info_orch_crop">Orchard Crop:</string>
    <string name="info_orch_loc">Orchard Location</string>
    <string name="info_orch_mass">Bag Mass:</string>
    <string name="info_orch_irig">Irrigation Type:</string>
    <string-array name="info_orch_irig_options">
        <item>Micro</item>
        <item>Drip</item>
        <item>Floppy</item>
        <item>Drag Lines</item>
        <item>Other</item>
        <item>None (dry land)</item>
    </string-array>
    <string name="info_orch_date">Date Planted:</string>
    <string name="info_orch_farm">Assigned Farm:</string>
...
    <string name="info_orch_map_locMes">Your Location Information seems to be disabled, would you like to enable it so you can find yourself on the map?</string>
    <string name="info_orch_map_locYes">Yes</string>
    <string name="info_orch_map_locNo">No</string>
    <string name="info_orch_map_locNever">Do Not Ask Again</string>

    <!--Strings related to Information on Workers-->
    <string name="info_work_fName">Worker Name:</string>
    <string name="info_work_sName">Worker Surname:</string>
    <string name="info_work_id">ID Number:</string>
    <string name="info_work_role">Is a foreman?</string>
    <string name="info_work_phone">Phone Number:</string>
    <string name="info_work_further">Further Information:</string>
    <string name="info_work_orchard">Assigned Orchards:</string>
...
