...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_work_butt_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onSaveChosen"
...
            android:visibility="visible"
            app:backgroundTint="@android:color/holo_blue_light"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/info_work_butt_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:clickable="true"
            android:onClick="onDeleteChosen"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_work_fName_desc" />

                            <EditText
                                android:id="@+id/info_work_fName_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_work_sName_desc" />

                            <EditText
                                android:id="@+id/info_work_sName_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_work_id_desc" />

                            <EditText
                                android:id="@+id/info_work_id_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_work_phone_desc" />

                            <EditText
                                android:id="@+id/info_work_phone_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
                                android:text="TextView"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toBottomOf="@+id/info_work_further_desc" />

                            <EditText
                                android:id="@+id/info_work_further_edit"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginBottom="8dp"
                                android:layout_marginEnd="8dp"
                                android:layout_marginStart="24dp"
                                android:layout_marginTop="8dp"
...
